test/sema/composite-type-redefinition.delta.output
composite-type-redefinition.delta:6:8: error: redefinition of 'Foo'
struct Foo { }
       ^
