test/sema/composite-type-redefinition.delta
// RUN: %check_errors %not %delta -typecheck %s

struct Foo: Copyable { }

// CHECK: [[@LINE+1]]:8: error: redefinition of 'Foo'
struct Foo { }
